[package]
name = "passgen"
version = "0.1.0"
authors = ["Guillermo Lella <arkorott@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
clipboard = "0.5.0"
clap = "2.33.0"
unicode-segmentation = "1.6.0"
