[package]
name = "passclip"
version = "0.1.2"
authors = ["Guillermo Lella <arkorott@gmail.com>"]
edition = "2018"
description = "Yet another password generator in Rust. Generates a random password and copies it to the clipboard. (Clipboard access compatible with OSX, Windows and Linux). Optional parameters = length, number of digits, number of uppercase and number of special chars."
license = "MIT OR Apache-2.0"
repository = "https://github.com/glella/passgen" #name change to passclip to avoid conflicts 
readme = "README.md"


[dependencies]
rand = "0.7.2"
clipboard = "0.5.0"
clap = "2.33.0"
unicode-segmentation = "1.6.0"
